# picow-ntp-7seg-clock

./: .gitignore  .gitmodules  LICENSE  README.md
3dmodel/src/: hyphen-colon.cq.py
3dmodel/step/: colon.step  colon.stl  hyphen.step  hyphen.stl
firmware/: CMakeLists.txt  Makefile
firmware/include/: brightness.hpp  button.hpp  cli.hpp  common.hpp  config.hpp  display.hpp  eeprom.hpp  ntp_client.hpp  rx8025nb.hpp
firmware/src/: brightness.cpp  cli.cpp  common.cpp  config.cpp  display.cpp  main.cpp  ntp_client.cpp  seg7_pwm_tx.pio
